Csrf page refactored into Htmx page + CsrfTokenTagHelper bug fixes

--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -21,7 +21,7 @@
                 </environment>
                 <environment include="@AppEnvironment.Development.ToString()">
                     <li class="nav-item">
-                        <a class="nav-link" authorized-only href="@PageFor.Test.Csrf">Csrf</a>
+                        <a class="nav-link" authorized-only href="@PageFor.Test.Htmx">Htmx</a>
                     </li>
                 </environment>
                 <!-- Add more links here if needed -->
