--- a/Sample.Hosted/Pages/Test/Htmx.cshtml
+++ b/Sample.Hosted/Pages/Test/Htmx.cshtml
@@ -244,22 +244,22 @@
     <script>
         console.log("Htmx scripts loaded pre");
 
-        drnApp.onmount.register('#divJsTestOutput1', function () {
+        DRN.Onmount.register('#divJsTestOutput1', function () {
             $("#divJsTestOutput1").text('ready to test');
         });
-        drnApp.onmount.register('#divJsTestOutput2', function () {
+        DRN.Onmount.register('#divJsTestOutput2', function () {
             $("#divJsTestOutput2").text('ready to test');
         });
 
-        drnApp.onmount.register('#btnJqueryTest', function (options) {
+        DRN.Onmount.register('#btnJqueryTest', function (options) {
             console.log("#btnJqueryTest on click handler 1 registered with " + options.id)
 
             $(this).click(function () {
                 $("#divJsTestOutput1").text("#btnJqueryTest works: Handler 1 " + options.id);
             });
-        },"handler1")
+        }, "handler1")
 
-        drnApp.onmount.register('#btnJqueryTestClean', function (options) {
+        DRN.Onmount.register('#btnJqueryTestClean', function (options) {
             console.log("#btnJqueryTestClean on click handler registered with " + options.id)
 
             $(this).click(function () {
@@ -272,12 +272,12 @@
     </script>
 
     <script disable-nonce>
-        drnApp.onmount.register('#btnJqueryTest', function (options) {
+        DRN.Onmount.register('#btnJqueryTest', function (options) {
             console.log("#btnJqueryTest on click handler 2 registered with " + options.id)
 
             $(this).click(function () {
                 $("#divJsTestOutput2").text("#btnJqueryTest works: Handler 2 with " + options.id);
             });
-        },"handler2");
+        }, "handler2");
     </script>
 }
